<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Manager Sokol</string>

    <!-- Fabric -->
    <string name="com.crashlytics.CrashSubmissionPromptTitle" tools:ignore="ExtraTranslation">Send Crash Report?</string>
    <string name="com.crashlytics.CrashSubmissionPromptMessage" tools:ignore="ExtraTranslation">Looks like we crashed! Please help us fix the problem by sending a crash report.</string>
    <string name="com.crashlytics.CrashSubmissionSendTitle" tools:ignore="ExtraTranslation">Send</string>
    <string name="com.crashlytics.CrashSubmissionAlwaysSendTitle" tools:ignore="ExtraTranslation">Always Send</string>
    <string name="com.crashlytics.CrashSubmissionCancelTitle" tools:ignore="ExtraTranslation">Don\'t Send</string>

    <!-- Fonts -->
    <string name="roboto_regular" translatable="false">sans-serif</string>
    <string name="roboto_light" translatable="false">sans-serif-light</string>
    <string name="roboto_condensed" translatable="false">sans-serif-condensed</string>
    <string name="roboto_black" translatable="false">sans-serif-black</string>
    <string name="roboto_thin" translatable="false">sans-serif-thin</string>
    <string name="roboto_medium" translatable="false">sans-serif-medium</string>

    <!-- Errors -->
    <string name="error_message">Application Error</string>
    <string name="error_empty_login">Login field is empty!</string>
    <string name="error_bad_password">Length of password is 8 chars minimum!</string>
    <string name="error_auth_error">Login failed! Check your credentials!</string>
    <string name="error_google_maps_not_found">Application "Google maps" not found!</string>
    <string name="error_phone_not_available">Phone engine not found - unable to make a call!</string>
    <string name="error_email_not_available">No mail application was found</string>


    <!-- General -->
    <string name="date_format">dd.MM.yyyy</string>
    <string name="numeric_format">%1$.2f</string>
    <string name="numeric_format_int">%1$.0f</string>
    <string name="national_currency">UAH</string>
    <string name="search_hint">Search by…</string>
    <string name="button_negative_text">Cancel</string>
    <string name="button_positive_text">OK</string>
    <string name="question_quit">Do you want to exit from application?</string>
    <string name="message_logout">You are logged out!</string>
    <string name="question_logout">All data will be wiped out! Do you really want to logout?</string>
    <string name="default_manager_name">Mr. Who</string>
    <string name="button_yes_text">Yes</string>
    <string name="button_no_text">No</string>
    <string name="button_reset_text">Reset</string>

    <!-- Login -->
    <string name="user_name_hint">Login</string>
    <string name="user_password_hint">Password</string>
    <string name="login_button_text">Authentication</string>
    <string name="message_auth_success">You are logged in!</string>
    <string name="error_access_denied">Access denied!</string>
    <string name="login_form_caption">Your credentials</string>

    <!-- Menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_goods">Goods</string>
    <string name="menu_route">Route</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_synchronize">Synchronization</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_prices">Price</string>
    <string name="menu_trades">TC</string>
    <string name="menu_currency">Currency</string>
    <string name="menu_google_play">Update Google Service</string>
    <string name="menu_update_application">Check for updates</string>

    <!-- Customer screen -->
    <string name="customer_tab_info">Info</string>
    <string name="customer_tab_tasks">Tasks</string>
    <string name="customer_tab_orders">Orders</string>
    <string name="customer_info_name_header">Name</string>
    <string name="customer_info_contact_header">Contact name</string>
    <string name="customer_info_address_header">Address</string>
    <string name="customer_info_notes">Notes</string>
    <string name="customer_info_phone_header">Phone</string>
    <string name="customer_info_email_header">E-Mail</string>
    <string name="customer_debt_header">Debt</string>
    <string name="customer_debt_outdated">Outdated</string>
    <string name="customer_debt_normal">In term</string>
    <string name="customer_debt_whole">Overall</string>
    <string name="customer_debt_no_debt">No debts</string>
    <string name="customer_tasks_header">Tasks</string>
    <string name="customer_task_research">Research</string>
    <string name="customer_task_no_tasks">No tasks</string>
    <string name="customer_task_individual">Individual</string>
    <string name="customer_order_plan_header">Order plan for visit</string>
    <string name="customer_order_list_header">Customer orders</string>
    <string name="customer_enter_task_result_hint">Provide task completion results…</string>
    <string name="customer_info_category_header">Class by turnover</string>
    <string name="customer_info_category_no_category">NOT SET</string>
    <string name="customer_add_new_note_title">Add new note</string>
    <string name="customer_plan_no_plans">No plans assigned</string>
    <string name="customer_info_notes_no_notes">No notes added</string>

    <!-- Orders screen -->
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_official">LTD</string>
    <string name="payment_type_fop">FOP</string>
    <string name="delivery_date_prefix">for:</string>
    <string name="order_title">Order</string>
    <string name="cart_title">Cart</string>
    <string name="order_delivery_date_title">Delivery date</string>
    <string name="order_currency_title">Currency</string>
    <string name="order_amount_title">Order amount</string>
    <string name="order_type_title">Payment type</string>
    <string name="order_comment_title">Comment for order</string>
    <string name="order_items_header_article">Art.</string>
    <string name="order_items_header_name">Item name</string>
    <string name="order_items_header_price">Price</string>
    <string name="order_items_header_quantity">Qty</string>
    <string name="error_low_price">Entered price value below minimal price!</string>
    <string name="action_send_order">Send order</string>
    <string name="error_empty_order">Send failed! Order is empty!</string>
    <string name="error_wrong_delivery">Send failed! Delivery date setted before order date!</string>
    <string name="action_clear_order">Clear order</string>
    <string name="order_items_counter_title">Number of items</string>
    <string name="order_no_orders">No orders</string>
    <string name="no_trades">No conditions</string>
    <string name="order_price_title">Price list</string>
    <string name="order_trade_title">Trade cond.</string>
    <string name="order_fact_title">Pay by fact</string>
    <string name="order_items_header_price_request">Request price for</string>

    <!-- Goods screen -->
    <string name="item_wh_rest_label">Str</string>
    <string name="item_cwh_rest_label">DC</string>
    <string name="item_official_rest_label" formatted="false">OF</string>
    <string name="item_base_price_label">Price</string>
    <string name="item_min_price_label">Min.</string>
    <string name="item_discount_label">Discount</string>
    <string name="all_brands">ALL</string>

    <!-- Routes screen -->
    <string name="monday">MO</string>
    <string name="tuesday">TU</string>
    <string name="wednesday">WE</string>
    <string name="thursday">TH</string>
    <string name="friday">FR</string>
    <string name="saturday">SA</string>
    <string name="sunday">SU</string>
    <string name="routes_no_route" >No route assigned for this day</string>


    <!-- CheckIn screen -->
    <string name="check_in">Check in</string>
    <string name="permission_need_camera">We need camera access to check in</string>
    <string name="map_latitude_header">Lat:</string>
    <string name="map_longitude_header">Long:</string>
    <string name="map_address_label">Map:</string>
    <string name="permission_title">Need a permission</string>
    <string name="message_unable_checkin">The geolocation is needed to check in</string>

    <!-- Sync screen -->
    <string name="settings_auto_sync">Auto synchronization</string>
    <string name="settings_server_address">Server address</string>
    <string name="message_sync_complete">Synchronization complete! Start background update…</string>
    <string name="api_error_text">API error</string>
    <string name="error_text">Error</string>
    <string name="illegal_database_update">Migration missing from v%d to v%d</string>
    <string name="connection_timeout">Can\'t connect to server</string>


    <!-- newly added -->
    <string name="dummy">--</string>
    <string name="version">Version</string>
    <string name="running_service">service is running</string>
    <string name="service_touch_to_launch" translatable="false">Touch here to launch</string>
    <string name="service_stop_update">Stop update</string>
    <string name="configuration_error">Configuration fetch error!</string>
    <string name="retry">Retry</string>
</resources>
