<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:orientation="vertical"
                android:background="@color/color_white"
                android:id="@+id/good_item_wrapper"
    >
    <TextView
        android:id="@+id/good_article_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/color_green"
        android:fontFamily="@string/roboto_black"
        android:textSize="20sp"
        tools:text="88890"
        />

    <LinearLayout
        android:id="@+id/good_rests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_toRightOf="@+id/good_article_text"
        android:layout_toEndOf="@+id/good_article_text"
        android:orientation="horizontal"
        android:paddingTop="@dimen/good_list_margin_half"
        android:paddingLeft="@dimen/good_list_margin"
        android:paddingStart="@dimen/good_list_margin"
        android:paddingEnd="@dimen/good_list_margin"
        android:paddingRight="@dimen/good_list_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/good_list_margin_half"
            android:layout_marginEnd="@dimen/good_list_margin_half"
            android:textColor="@color/color_gray"
            android:fontFamily="@string/roboto_black"
            android:gravity="end"
            android:textSize="12sp"
            android:text="@string/item_wh_rest_label"
            />
        <TextView
            android:id="@+id/good_rest_wh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/good_list_margin"
            android:layout_marginEnd="@dimen/good_list_margin"
            android:textColor="@color/color_red"
            android:fontFamily="@string/roboto_condensed"
            android:gravity="start"
            android:textSize="12sp"
            tools:text="15000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/good_list_margin_half"
            android:layout_marginEnd="@dimen/good_list_margin_half"
            android:textColor="@color/color_gray"
            android:fontFamily="@string/roboto_black"
            android:gravity="end"
            android:textSize="12sp"
            android:text="@string/item_cwh_rest_label"
            />
        <TextView
            android:id="@+id/good_rest_cwh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/good_list_margin"
            android:layout_marginEnd="@dimen/good_list_margin"
            android:textColor="@color/color_red"
            android:fontFamily="@string/roboto_condensed"
            android:gravity="start"
            android:textSize="12sp"
            tools:text="15000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/good_list_margin_half"
            android:layout_marginEnd="@dimen/good_list_margin_half"
            android:textColor="@color/color_gray"
            android:fontFamily="@string/roboto_black"
            android:gravity="end"
            android:textSize="12sp"
            android:text="@string/item_official_rest_label"
            />
        <TextView
            android:id="@+id/good_rest_official_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_red"
            android:fontFamily="@string/roboto_condensed"
            android:gravity="start"
            android:textSize="12sp"
            tools:text="15000"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/good_brand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/good_rests"
        android:layout_toEndOf="@+id/good_rests"
        android:paddingTop="@dimen/good_list_margin_half"
        android:textColor="@color/color_black"
        android:fontFamily="@string/roboto_condensed"
        android:textSize="12sp"
        android:maxLines="1"
        android:gravity="end"
        tools:text="Sokol TM"
         />
    <LinearLayout
        android:id="@+id/price_value_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/good_brand_text"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/good_base_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_green"
            android:fontFamily="@string/roboto_medium"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="15000.00"
            />
        <TextView
            android:id="@+id/good_min_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_green"
            android:fontFamily="@string/roboto_medium"
            android:gravity="end"
            android:textSize="16sp"
            tools:text="1500.00"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/price_label_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/good_brand_text"
        android:layout_toStartOf="@id/price_value_group"
        android:layout_toLeftOf="@id/price_value_group"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/good_list_margin_half"
            android:layout_marginEnd="@dimen/good_list_margin_half"
            android:textColor="@color/color_gray"
            android:fontFamily="@string/roboto_regular"
            android:gravity="end"
            android:textSize="16sp"
            android:text="@string/item_base_price_label"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/good_list_margin_half"
            android:layout_marginEnd="@dimen/good_list_margin_half"
            android:textColor="@color/color_gray"
            android:fontFamily="@string/roboto_regular"
            android:gravity="end"
            android:textSize="16sp"
            android:text="@string/item_min_price_label"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/good_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/price_label_group"
        android:layout_toStartOf="@id/price_label_group"
        android:layout_below="@id/good_article_text"
        android:minLines="2"
        android:maxLines="2"
        android:textColor="@color/color_black"
        android:fontFamily="@string/roboto_regular"
        android:gravity="start"
        android:textSize="16sp"
        tools:text="Кабельный канал 12х12 с замком"
        />

</RelativeLayout>