<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="Price name"
            android:id="@+id/price_name_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Trade"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:id="@+id/trade_name_label"/>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:inputType="number"
            android:hint="@string/order_items_header_quantity"
            android:textColorHint="@color/color_gray"
            android:background="@drawable/rectangle_shape"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_base_price_label"
                android:layout_margin="8dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_base_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/color_green"
                android:fontFamily="@string/roboto_black"
                tools:text="10.55"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_discount_label"
                android:layout_margin="8dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/color_green"
                android:fontFamily="@string/roboto_black"
                tools:text="10.55"
                />
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:inputType="numberDecimal"
            android:hint="@string/order_items_header_price"
            android:textColorHint="@color/color_gray"
            android:background="@drawable/rectangle_shape"
            />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>