<?xml version="1.0" encoding="utf-8"?>
<com.sokolua.manager.ui.screens.main.MainView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/goods_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/goods_text"
                android:layout_margin="@dimen/main_page_image_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/main_goods"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/goods_text"
                style="@style/MainScreen.Text"
                android:text="@string/menu_goods"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/customers_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/customers_text"
                android:layout_margin="@dimen/main_page_image_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/main_clients"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MainScreen.Text"
                android:id="@+id/customers_text"
                android:text="@string/menu_customers"
                />

        </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/route_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/route_text"
                    android:layout_margin="@dimen/main_page_image_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main_route"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/route_text"
                    style="@style/MainScreen.Text"
                    android:text="@string/menu_route"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/orders_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/orders_text"
                    android:layout_margin="@dimen/main_page_image_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main_orders"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/orders_text"
                    style="@style/MainScreen.Text"
                    android:text="@string/menu_orders"
                    />

            </RelativeLayout>

        </TableRow>

    </TableLayout>


</com.sokolua.manager.ui.screens.main.MainView>